# neutrons_jgb

UCNaI-main/: CMakeLists.txt
UCNaI-main/examples/cs137/: cs137.mac
UCNaI-main/include/: EventAction.hh  EventAction_Messenger.hh  RunAction.hh
UCNaI-main/src/: EventAction.cc  Experimental_Hall.cc  Experimental_Hall_Messenger.cc  PhysicsList.cc  RunAction.cc
custom_test/: CMakeLists.txt  detector.cc  detector.hh  main.cc  myDetector.cc  myDetector.hh  myGen.cc  myGen.hh  myGun.cc  myGun.hh  myPhysics.cc  myPhysics.hh  run.cc  run.hh
examples/examples/basic/B1/: vis.mac
neutron_sim/: CMakeLists.txt  generate_hist.py  generate_hist2.py  loop.mac  main.cc  pyvenv.cfg  run.mac
neutron_sim/include/: Action.hh  DetectorConstruction.hh  EventAction.hh  Generator.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
neutron_sim/src/: Action.cc  DetectorConstruction.cc  EventAction.cc  Generator.cc  PhysicsList.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc
neutron_sim/testSSLG4Ex/: CMakeLists.txt  init_vis.mac  main.cc  run.mac  vis.mac
neutron_sim/testSSLG4Ex/include/: DetectorConstruction.hh  PhysicsList.hh  SimOutputManager.hh
neutron_sim/testSSLG4Ex/src/: DetectorConstruction.cc  PhysicsList.cc  RunAction.cc  SimOutputManager.cc  SteppingAction.cc
results/gammas/: README.md
results/gammas/co60/: data.csv  edep.csv  edep_photons.csv
results/gammas/cs137/: data.csv  edep.csv  edep_photons.csv  run.mac
results/gammas/na22/: data.csv  edep.csv  edep_photons.csv  run.mac
results/test/: 1.5 MeV.csv  10mev.csv  15mev.csv  2.5MEV.csv  20mev.csv  2MeV.csv  3.5mev.csv  4mev.csv  5mev.csv  Vinyltoluene.csv  air.csv  ej.csv  lead.csv  nai.csv  output_h1_nd0.csv  output_h1_nd1.csv  output_h1_nd2.csv  output_h1_nd3.csv  output_h1_nd4.csv  output_h1_nd5.csv  output_h1_nd6.csv  output_h1_nd7.csv  output_h1_nd8.csv  output_h1_nd9.csv  polyethylene.csv
testneutron/: CMakeLists.txt  rdecay02.cc
testneutron/src/: EmStandardPhysics.cc
